--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^3.6.3",
     "next": "10.0.1",
+    "normalize.css": "^8.0.1",
+    "postcss-flexbugs-fixes": "^5.0.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "uuidv4": "^6.2.5"
+  },
+  "devDependencies": {
+    "less": "^3.12.2"
   }
 }
